--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,5 +1,9 @@
 = wsclient-cloudstore-poc
 
+:toc:
+:toc-placement: preamble
+:toclevels: 1
+
 A Java EE Timer-controlled JAX-RS client to cloud file store application to facilitate analysis of text content obtained from APIs (proof of concept).
 
 [horizontal]
@@ -7,3 +11,72 @@ A Java EE Timer-controlled JAX-RS client to cloud file store application to faci
 Master:: image:https://travis-ci.org/UCL/wsclient-cloudstore-poc.svg?branch=master["Build Status", link="https://travis-ci.org/UCL/wsclient-cloudstore-poc"]
 
 Devel:: image:https://travis-ci.org/UCL/wsclient-cloudstore-poc.svg?branch=devel["Build Status", link="https://travis-ci.org/UCL/wsclient-cloudstore-poc"]
+
+== Installation
+
+.Requirements
+- JDK 8
+- Optional: A Java EE 8 server (full profile) https://javaee.github.io/glassfish/download
+
+....
+git clone git@github.com:UCL/wsclient-cloudstore-poc.git
+cd wsclient-cloudstore-poc
+./mvnw package
+....
+
+Maven phase `package` generates a shell script to run the application in an embedded instance of Glassfish 5. For deployments in a different Java EE server, please use the generated artifact `wsclient-app-[version].jar` in `wsclient-app/target`.
+
+== Usage
+
+The application can run locally using the maven-generated script:
+
+....
+sh wsclient-main/target/app/bin/glassfish5
+....
+
+It needs the following environmental variables:
+
+From Twitter API https://apps.twitter.com/ 
+
+- `TWITTER_KEY`
+- `TWITTER_SECRET`
+
+From Microsoft App portal https://apps.dev.microsoft.com/
+
+- `MSGRAPH_REFRESH`
+- `MSAPP_SECRET`
+- `MSAPP_ID`
+
+== Support/Issues
+
+Please https://github.com/UCL/wsclient-cloudstore-poc/issues/new[open an issue] for support.
+
+== Contributing
+
+Please contribute using the https://guides.github.com/introduction/flow/[Github Flow] workflow.
+
+IMPORTANT: Please keep the use of 3rd party runtime libraries to a minimum. The application is expected to run on a standard Java EE 7 server (Glassfish full profile).
+
+== License
+
+MIT License
+
+Copyright (c) 2018 David Guzman <d.guzman at ucl.ac.uk>
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
