Update sequence diagram. Add information on wsclient-app

--- a/README.adoc
+++ b/README.adoc
@@ -12,7 +12,7 @@ endif::[]
 A Java EE Timer-controlled JAX-RS client to cloud file store application to facilitate analysis of text content obtained from APIs (proof of concept).
 
 [horizontal]
-.Build Status
+.*Build Status*
 Master:: image:https://travis-ci.org/UCL/wsclient-cloudstore-poc.svg?branch=master["Build Status", link="https://travis-ci.org/UCL/wsclient-cloudstore-poc"]
 
 Devel:: image:https://travis-ci.org/UCL/wsclient-cloudstore-poc.svg?branch=devel["Build Status", link="https://travis-ci.org/UCL/wsclient-cloudstore-poc"]
@@ -25,7 +25,7 @@ toc::[]
 
 == Installation
 
-.Requirements
+=== Requirements
 - JDK 8
 - Optional: A Java EE 8 server (full profile) https://javaee.github.io/glassfish/download
 - Graphviz (for documentation in `src/main/asciidoc`)
