Add information on PaaS

--- a/README.adoc
+++ b/README.adoc
@@ -23,7 +23,7 @@ http://github-pages.ucl.ac.uk/wsclient-cloudstore-poc/
 
 toc::[]
 
-== Installation
+== Build instructions
 
 === Requirements
 - JDK 8
